test_regress/t/t_type_param_circ_bad.out
%Error: t/t_type_param_circ_bad.v:14:27: Reference to 'SZ' type would form a recursive definition
   14 |    # (parameter type SZ = SZ)
      |                           ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
